--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -16,6 +16,7 @@
     />
   </head>
   <body>
+    {% include 'navbar.html' %}
     <div class="container pt-4">{% block content %} {% endblock %}</div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
