--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -21,13 +21,23 @@
       id="navbarSupportedContent"
     >
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        {% if user.is_authenticated %}
         <li class="nav-item">
           <a
             class="nav-link"
-            href="#"
-            >Link</a
+            href="{% url 'logout'%}"
+            >Logout</a
           >
         </li>
+        {% else %}
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            href="{% url 'home' %}"
+            >Login</a
+          >
+        </li>
+        {% endif %}
       </ul>
     </div>
   </div>
