--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -33,6 +33,13 @@
         <li class="nav-item">
           <a
             class="nav-link"
+            href="{% url 'register' %}"
+            >Register</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
             href="{% url 'home' %}"
             >Login</a
           >
