--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,43 +1,56 @@
 {% extends 'base.html' %} {% block content %}
-<div class="col-md-6 offset-md-3">
-  {% if user.is_authenticated %}
+  <div class="col-md-6 offset-md-3">
+    {% if user.is_authenticated %}
 
-  <h1>Hello Friend!!!</h1>
-
-  {% else %}
-  <h1 class="mb-4">Login</h1>
-  <form
-    method="post"
-    action="{% url 'home' %}"
-  >
-    {% csrf_token %}
-    <div class="mb-3">
-      <input
-        type="text"
-        class="form-control"
-        aria-describedby="userName"
-        name="username"
-        placeholder="Username"
-        required
-      />
-    </div>
-    <div class="mb-4">
-      <input
-        type="password"
-        class="form-control"
-        aria-describedby="password"
-        name="password"
-        placeholder="Password"
-        required
-      />
-    </div>
-    <button
-      type="submit"
-      class="btn btn-secondary"
-    >
-      Login
-    </button>
-  </form>
-  {% endif %}
-</div>
+      <h1>Records...</h1>
+      {% if records %}
+        {% for record in records %}
+          {{ record.first_name }}
+          {{ record.last_name }}
+          {{ record.email }}
+          {{ record.phone }}
+          {{ record.address }}
+          {{ record.city }}
+          {{ record.state }}
+          {{ record.zipcode }}
+          {{ record.created_at }}
+          {{ record.id }}
+        {% endfor %}
+      {% endif %}
+    {% else %}
+      <h1 class="mb-4">Login</h1>
+      <form
+        method="post"
+        action="{% url 'home' %}"
+      >
+        {% csrf_token %}
+        <div class="mb-3">
+          <input
+            type="text"
+            class="form-control"
+            aria-describedby="userName"
+            name="username"
+            placeholder="Username"
+            required
+          />
+        </div>
+        <div class="mb-4">
+          <input
+            type="password"
+            class="form-control"
+            aria-describedby="password"
+            name="password"
+            placeholder="Password"
+            required
+          />
+        </div>
+        <button
+          type="submit"
+          class="btn btn-secondary"
+        >
+          Login
+        </button>
+      </form>
+    {% endif %}
+  </div>
 {% endblock %}
