--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,56 +1,70 @@
 {% extends 'base.html' %} {% block content %}
-  <div class="col-md-6 offset-md-3">
-    {% if user.is_authenticated %}
-
-      <h1>Records...</h1>
-      {% if records %}
+<div>
+  {% if user.is_authenticated %} {% if records %}
+  <table class="table table-striped table-hover table-bordered">
+    <thead class="table-dark">
+      <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Name</th>
+        <th scope="col">Email</th>
+        <th scope="col">Phone</th>
+        <th scope="col">Address</th>
+        <th scope="col">City</th>
+        <th scope="col">State</th>
+        <th scope="col">Zipcode</th>
+        <th scope="col">Created At</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
         {% for record in records %}
-          {{ record.first_name }}
-          {{ record.last_name }}
-          {{ record.email }}
-          {{ record.phone }}
-          {{ record.address }}
-          {{ record.city }}
-          {{ record.state }}
-          {{ record.zipcode }}
-          {{ record.created_at }}
-          {{ record.id }}
-        {% endfor %}
-      {% endif %}
-    {% else %}
-      <h1 class="mb-4">Login</h1>
-      <form
-        method="post"
-        action="{% url 'home' %}"
-      >
-        {% csrf_token %}
-        <div class="mb-3">
-          <input
-            type="text"
-            class="form-control"
-            aria-describedby="userName"
-            name="username"
-            placeholder="Username"
-            required
-          />
-        </div>
-        <div class="mb-4">
-          <input
-            type="password"
-            class="form-control"
-            aria-describedby="password"
-            name="password"
-            placeholder="Password"
-            required
-          />
-        </div>
-        <button
-          type="submit"
-          class="btn btn-secondary"
-        >
-          Login
-        </button>
-      </form>
-    {% endif %}
-  </div>
+        <td>{{ record.id }}</td>
+        <td>{{ record.first_name }} {{ record.last_name }}</td>
+        <td>{{ record.email }}</td>
+        <td>{{ record.phone }}</td>
+        <td>{{ record.address }}</td>
+        <td>{{ record.city }}</td>
+        <td>{{ record.state }}</td>
+        <td>{{ record.zipcode }}</td>
+        <td>{{ record.created_at }}</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+  {% endif %} {% else %}
+  <h1 class="mb-4">Login</h1>
+  <form
+    method="post"
+    action="{% url 'home' %}"
+  >
+    {% csrf_token %}
+    <div class="mb-3">
+      <input
+        type="text"
+        class="form-control"
+        aria-describedby="userName"
+        name="username"
+        placeholder="Username"
+        required
+      />
+    </div>
+    <div class="mb-4">
+      <input
+        type="password"
+        class="form-control"
+        aria-describedby="password"
+        name="password"
+        placeholder="Password"
+        required
+      />
+    </div>
+    <button
+      type="submit"
+      class="btn btn-secondary"
+    >
+      Login
+    </button>
+  </form>
+  {% endif %}
+</div>
 {% endblock %}
