--- a/website/templates/record.html
+++ b/website/templates/record.html
@@ -1,14 +1,43 @@
-{% block content %}
-    <h1>Customer Record</h1>
+{% extends 'base.html' %} {% block content %}
 
-    <p>{{ customer_record.id }}</p>
-    <p>{{ customer_record.first_name }} {{ customer_record.last_name }}</p>
-    <p>{{ customer_record.email }}</p>
-    <p>{{ customer_record.phone }}</p>
-    <p>{{ customer_record.address }}</p>
-    <p>{{ customer_record.city }}</p>
-    <p>{{ customer_record.state }}</p>
-    <p>{{ customer_record.zipcode }}</p>
-    <p>{{ customer_record.created_at }}</p>
+<div class="card mb-3">
+  <h5 class="card-header">
+    {{ customer_record.first_name }} {{ customer_record.last_name }}
+  </h5>
+  <div class="card-body">
+    <div class="py-1">
+      <strong>ID: </strong>
+      <p class="card-text d-inline lh-1">{{ customer_record.id }}</p>
+    </div>
+    <div class="py-1">
+      <strong>Email: </strong>
+      <p class="card-text d-inline">{{ customer_record.email }}</p>
+    </div>
+    <div class="py-1">
+      <strong>Phone: </strong>
+      <p class="card-text d-inline">{{ customer_record.phone }}</p>
+    </div>
+    <div class="py-1">
+      <strong>Address: </strong>
+      <p class="card-text d-inline">{{ customer_record.address }}</p>
+    </div>
+    <div class="py-1">
+      <strong>City: </strong>
+      <p class="card-text d-inline">{{ customer_record.city }}</p>
+    </div>
+    <div class="py-1">
+      <strong>State: </strong>
+      <p class="card-text d-inline">{{ customer_record.state }}</p>
+    </div>
+    <div class="py-1">
+      <strong>Zip Code: </strong>
+      <p class="card-text d-inline">{{ customer_record.zipcode }}</p>
+    </div>
+    <div class="py-1">
+      <strong>Date Created: </strong>
+      <p class="card-text d-inline">{{ customer_record.created_at }}</p>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
