Allow users to update records

--- a/website/templates/record.html
+++ b/website/templates/record.html
@@ -50,13 +50,20 @@
       </div>
       <div>
         <a
+          href="{% url 'update_record' customer_record.id %}"
+          class="btn btn-secondary"
+        >Edit Record</a
+          >
+        </div>
+      <div>
+        <a
           href="{% url 'delete_record' customer_record.id %}"
           class="btn btn-danger"
         >Delete</a
           >
-        </div>
       </div>
-    </div>
+
+
   </div>
 
 {% endblock %}
