--- a/website/templates/register.html
+++ b/website/templates/register.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content %}
   <div class="col-md-6 offset-md-3">
-    <h1>register user</h1>
+    <h1>Register User</h1>
     <form
       method="post"
       action=""
